syntax = "proto3";

option go_package = "scmc/rpc/pb/image";

package image;

message ImageInfo {
    string name = 1;    // repo + tag
    string repo = 2;
    string tag = 3;
    string digest = 4;
}

message ImageDBInfo {
    int64 id = 1;
    string name = 2;
    string version = 3;
    string description = 4;
    bool check_status = 5;
    bool approval_status = 6;
    string update_time = 7;
}

message UploadInfo {
    string name = 1;    // repo + tag
    string version = 2;
    string type = 3;
    string checksum = 4;
    string description = 5;
    int64 size = 6;
}
